--- a/sample.html
+++ b/sample.html
@@ -13,8 +13,8 @@
     }
     .dashboard {
       display: grid;
-      grid-template-columns: repeat(30, 30px);
-      grid-template-rows: repeat(30, 30px);
+      grid-template-columns: repeat(30, 40px);
+      grid-template-rows: repeat(30, 40px);
       gap: 10px;
       width: auto;
       position: relative;
@@ -29,10 +29,11 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       position: absolute;
       box-sizing: border-box;
+      border: 4px solid white;
     }
     .bar { background-color: #3498db; }
     .line { background-color: #e74c3c; }
-    .numberOnly { background-color: #2e975a; }
+    .numberOnly { background-color: #2ecc71; }
     .textOnly { background-color: #9b59b6; }
     .table { background-color: #f1c40f; color: black; }
     .maps { background-color: #e67e22; }
@@ -44,7 +45,7 @@
       height: 100%;
       pointer-events: none;
       display: none;
-      background-size: 30px 30px;
+      background-size: 40px 40px;
       background-image: linear-gradient(rgba(0, 0, 0, 0.2) 1px, transparent 1px),
                         linear-gradient(90deg, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
     }
@@ -58,7 +59,7 @@
 
   <script>
     const enableGridLines = true; // Set to false to hide grid lines
-    const gridSize = 30; // Grid cell size in pixels
+    const gridSize = 40; // Grid cell size in pixels
 
     async function generateDashboard() {
       try {
@@ -79,10 +80,10 @@
           chartElement.textContent = `${chart.title} (${chart.chart_type})`;
           
           // Ensure the exact coverage of grid units
-          chartElement.style.width = `${(chart.position.width) * gridSize}px`;
-          chartElement.style.height = `${(chart.position.height) * gridSize}px`;
-          chartElement.style.left = `${(chart.position.x+6) * gridSize}px`;
-          chartElement.style.top = `${(chart.position.y+2) * gridSize}px`;
+          chartElement.style.width = `${chart.position.width * gridSize}px`;
+          chartElement.style.height = `${chart.position.height * gridSize}px`;
+          chartElement.style.left = `${(chart.position.x+4) * gridSize}px`;
+          chartElement.style.top = `${(chart.position.y+1) * gridSize}px`;
           
           dashboard.appendChild(chartElement);
         });
